<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@android:color/transparent"
    android:paddingStart="60dp"
    android:paddingEnd="60dp">

    <ImageView
        android:id="@+id/login_logo_inv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="5dp"
        android:layout_marginTop="30dp"
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/diapason"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/login_slogan"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_inv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="20"
        android:text="@string/slogan_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp"
        android:textSize="42sp"
        android:elevation="5dp"/>

    <EditText
        android:id="@+id/email"
        app:layout_constraintBottom_toTopOf="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/password"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@color/white"/>

    <Button
        android:id="@+id/btn_reset_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:padding="0dp"/>

        <!-- Login Button -->

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup" />

    <Button
        android:id="@+id/btn_signup"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>